--- a/Indexpage2.html
+++ b/Indexpage2.html
@@ -39,8 +39,7 @@
                 <div class="navbar-nav ml-auto">
                     
                         <a class="nav-item nav-link" href="./Indexpage2.html">Qui sommes nous?</a>
-                        <a class="nav-item nav-link" href="/">Tarifs</a>
-                        <a class="nav-item nav-link" href="/">Compétitions</a>
+                        <a class="nav-item nav-link" href="./Tarif.html">Offres</a>
                         <a class="nav-item nav-link" href="/">Proshop</a>
                         <a class="nav-item nav-link" href="/">Contact</a>
                     
