--- a/Tarif.html
+++ b/Tarif.html
@@ -41,7 +41,7 @@
                 
                     <a class="nav-item nav-link" href="./Indexpage2.html">Qui sommes nous?</a>
                     <a class="nav-item nav-link" href="./Tarif.html">Offres</a>
-                    <a class="nav-item nav-link" href="/">Proshop</a>
+                    <a class="nav-item nav-link" href="./proshop.html">Proshop</a>
                     <a class="nav-item nav-link" href="/">Contact</a>
             </div>
         </div>
