Ajout Onglet contact
Problème section contact-form avec la carte qui se met en dessous

--- a/Indexpage2.html
+++ b/Indexpage2.html
@@ -49,7 +49,7 @@
 <!--La présentation-->
     <div class="container">
         <div class="row">
-            <div class="col-md-12 pres-head">
+            <div class="col-md-12 pres-head" id="onglet2">
                 <h1>Notre présentation</h1>
             </div>
         </div>
