--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <!-- *****************************HEADER***************************** -->
 <!--NAVBAR-->
-    <header>
+    <header id="P1">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <a class="navbar-brand" href="/index.html"> Liberty<img src="./Ressources/Images/navbar.png"><span>Golf</span></a>
 <!--bouton barre de navigation-->
@@ -40,10 +40,10 @@
             <div class="collapse navbar-collapse" id="monmenu">
                 <div class="navbar-nav ml-auto">
                     
-                        <a class="nav-item nav-link" href="./Indexpage2.html">Qui sommes nous?</a>
+                        <a class="nav-item nav-link" href="./Indexpage2.html#onglet2">Qui sommes nous?</a>
                         <a class="nav-item nav-link" href="./Tarif.html">Offres</a>
                         <a class="nav-item nav-link" href="./proshop.html">Proshop</a>
-                        <a class="nav-item nav-link" href="/">Contact</a>
+                        <a class="nav-item nav-link" href="./contact.html#contact">Contact</a>
                     
                 </div>
             </div>
