Ajout onglet Contact
Petites correction visuels à finir + correction responsive

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 <!--TEXT IMAGE-->
         <div class="container">
             <div class="row">
-                <div class="col-md-12 main-title">
+                <div class="col-md-12 mx-auto main-title">
                     <h1>Liberty<img src="./Ressources/Images/navbar.png"><span> Golf</span></h1>
-                    <p>Le paradis des golfeurs. Venez vous faire plaisir sur l'un des parcours mythique du championnat d'europe.</p>
+                    <p class="mx-auto">Le paradis des golfeurs. Venez vous faire plaisir sur l'un des parcours mythique du championnat d'europe.</p>
                     
                     <a href="./Indexpage2.html" class="btn btn-header">Présentation</a>
                 </div>
