Correction du Responsive barnav OK

--- a/Indexpage2.html
+++ b/Indexpage2.html
@@ -16,18 +16,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 
 <!--CSS-->
-    <link rel="stylesheet" href="Ressources/Css/stylepage2.css">
+    <link rel="stylesheet" href="Ressources/Css/style.css">
 </head>
 
 <body>
     <!--NAVBAR-->
-    <header>
+    <header id="hd-qsn">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <a class="navbar-brand" href="/index.html"> Liberty<img src="./Ressources/Images/navbar.png"><span>Golf</span></a>
 <!--bouton barre de navigation-->
             <button class="navbar-toggler"
                     type="button" 
-                    data-toggler="collapse" 
+                    data-toggle="collapse" 
                     data-target="#monmenu" 
                     aria-controls="monmenu" 
                     aria-label="menu pour mobile">
@@ -41,7 +41,7 @@
                         <a class="nav-item nav-link" href="./Indexpage2.html">Qui sommes nous?</a>
                         <a class="nav-item nav-link" href="./Tarif.html">Offres</a>
                         <a class="nav-item nav-link" href="./proshop.html">Proshop</a>
-                        <a class="nav-item nav-link" href="/">Contact</a>
+                        <a class="nav-item nav-link" href="./contact.html">Contact</a>
                     
                 </div>
             </div>
@@ -49,7 +49,7 @@
 <!--La présentation-->
     <div class="container">
         <div class="row">
-            <div class="col-md-12 pres-head" id="onglet2">
+            <div class="col-md-12 pres-head">
                 <h1>Notre présentation</h1>
             </div>
         </div>
