--- a/Tarif.html
+++ b/Tarif.html
@@ -28,7 +28,7 @@
 <!--bouton barre de navigation-->
         <button class="navbar-toggler"
                 type="button" 
-                data-toggler="collapse" 
+                data-toggle="collapse" 
                 data-target="#monmenu" 
                 aria-controls="monmenu" 
                 aria-label="menu pour mobile">
@@ -42,7 +42,7 @@
                     <a class="nav-item nav-link" href="./Indexpage2.html">Qui sommes nous?</a>
                     <a class="nav-item nav-link" href="./Tarif.html">Offres</a>
                     <a class="nav-item nav-link" href="./proshop.html">Proshop</a>
-                    <a class="nav-item nav-link" href="/">Contact</a>
+                    <a class="nav-item nav-link" href="./contact.html">Contact</a>
             </div>
         </div>
     </nav>
