--- a/proshop.html
+++ b/proshop.html
@@ -22,14 +22,14 @@
 <body>
     <!--NAVBAR-->
 
-    <header>
+    <header id="hd-proshop">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <a class="navbar-brand" href="/index.html"> Liberty<img src="./Ressources/Images/navbar.png"><span>Golf</span></a>
 
 <!--bouton barre de navigation-->
             <button class="navbar-toggler"
                     type="button" 
-                    data-toggler="collapse" 
+                    data-toggle="collapse" 
                     data-target="#monmenu" 
                     aria-controls="monmenu" 
                     aria-label="menu pour mobile">
@@ -43,7 +43,7 @@
                         <a class="nav-item nav-link" href="./Indexpage2.html">Qui sommes nous?</a>
                         <a class="nav-item nav-link" href="./Tarif.html">Offres</a>
                         <a class="nav-item nav-link" href="./proshop.html">Proshop</a>
-                        <a class="nav-item nav-link" href="/">Contact</a>
+                        <a class="nav-item nav-link" href="./contact.html">Contact</a>
                     
                 </div>
             </div>
@@ -187,7 +187,7 @@
 
 
         <!-- *****************************FOOTER***************************** -->
-    <footer>
+    <footer id="ft-proshop">
         <div>
                 <h2>Retrouvez nous sur les réseaux sociaux</h2>
         </div>
