--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 <!--bouton barre de navigation-->
             <button class="navbar-toggler"
                     type="button" 
-                    data-toggler="collapse" 
+                    data-toggle="collapse" 
                     data-target="#monmenu" 
                     aria-controls="monmenu" 
                     aria-label="menu pour mobile">
@@ -38,10 +38,10 @@
             <div class="collapse navbar-collapse" id="monmenu">
                 <div class="navbar-nav ml-auto">
                     
-                        <a class="nav-item nav-link" href="./Indexpage2.html#onglet2">Qui sommes nous?</a>
+                        <a class="nav-item nav-link" href="./Indexpage2.html">Qui sommes nous?</a>
                         <a class="nav-item nav-link" href="./Tarif.html">Offres</a>
                         <a class="nav-item nav-link" href="./proshop.html">Proshop</a>
-                        <a class="nav-item nav-link" href="./contact.html#contact">Contact</a>
+                        <a class="nav-item nav-link" href="./contact.html">Contact</a>
                     
                 </div>
             </div>
