--- a/proshop.html
+++ b/proshop.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
         </nav>
-        <div class="head-txt">
+        <div class="head-txt-ps">
             <h1>Le Proshop</h1>
         </div>
         </header>
@@ -101,7 +101,7 @@
                             </div>
                             <div class="col-md-6">
                                 <h4>Putter Ping V3</h4>
-                                <ul>
+                                <ul class="list-carac-ps">
                                     <li>Grip: Jumbo</li>
                                     <li>Niveau : Tous niveaux</li>
                                     <li>Prix: 130€</li>
@@ -121,7 +121,7 @@
                             </div>
                             <div class="col-md-6">
                                 <h4>DRIVER CALLAWAY X2 HOT</h4>
-                                <ul>
+                                <ul class="list-carac-ps">
                                     <li>Grip: Standard</li>
                                     <li>Niveau : Tous niveaux</li>
                                     <li>Prix: 250€</li>
@@ -145,7 +145,7 @@
                             </div>
                             <div class="col-md-6">
                                 <h4>TAYLORMADE HI-TOE</h4>
-                                <ul>
+                                <ul class="list-carac-ps">
                                     <li>Grip: Standard</li>
                                     <li>Niveau : Tous niveaux</li>
                                     <li>Prix: 130€</li>
@@ -165,7 +165,7 @@
                             </div>
                             <div class="col-md-6">
                                 <h4>EDGE TOUR PRO ED SPÉ</h4>
-                                <ul>
+                                <ul class="list-carac-ps">
                                     <li>Compartiments club Séparés</li>
                                     <li>Etanche</li>
                                     <li>Prix: 200€</li>
