--- a/Tarif.html
+++ b/Tarif.html
@@ -16,13 +16,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 
 <!--CSS-->
-    <link rel="stylesheet" href="Ressources/Css/styletarif.css">
+    <link rel="stylesheet" href="Ressources/Css/style.css">
 </head>
 <body>
 <header>
         <!-- *****************************HEADER***************************** -->
 <!--NAVBAR-->
-<header>
+<header id="hd-tarif">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="/index.html"> Liberty<img src="./Ressources/Images/navbar.png"><span>Golf</span></a>
 <!--bouton barre de navigation-->
@@ -46,6 +46,7 @@
             </div>
         </div>
     </nav>
+
 <!--TEXT IMAGE-->
     <div class="container">
         <div class="row">
@@ -141,7 +142,9 @@
                         </ul>
                     </div>
                     <div class="formule-signup">
-                        <a href="/" class="formule-btn">Je souscris</a>
+                        <button class="btn-general" type="button">
+                            <a href="/" target="blank"> Je souscris</a>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -163,7 +166,9 @@
                         </ul>
                     </div>
                     <div class="formule-signup">
-                        <a href="/" class="formule-btn">Je souscris</a>
+                        <button class="btn-general" type="button">
+                            <a href="/" target="blank"> Je souscris</a>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -186,7 +191,9 @@
                         </ul>
                     </div>
                     <div class="formule-signup">
-                        <a href="/" class="formule-btn">Je souscris</a>
+                        <button class="btn-general" type="button">
+                            <a href="/" target="blank"> Je souscris</a>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -210,7 +217,9 @@
                         </ul>
                     </div>
                     <div class="formule-signup">
-                        <a href="/" class="formule-btn">Je souscris</a>
+                        <button class="btn-general" type="button">
+                            <a href="/" target="blank"> Je souscris</a>
+                        </button>
                     </div>
                 </div>
             </div>
