--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
                                     </div>
                                     <div class="col-md-6">
                                         <div class="contact-formu">
-                                            <label>Email</label>
+                                            <label>Email :</label>
                                             <input type="text" id="Email" placeholder="Votre Email">
                                         </div>
                                         
@@ -102,7 +102,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="contact-formu">
-                                            <label>Votre message</label>
+                                            <label>Votre message : </label>
                                             <textarea id="message" rows="3" class="contact-message"></textarea>
                                             <button class="btn-general" type="button">Envoyer</button>
                                         </div>
@@ -115,7 +115,7 @@
                         <div class="col-md-6">
                             <div class="contact-form">
                                 <div class="map">
-                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2740.7019438883813!2d-1.412793684403707!3d46.61289297913133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x480424f72009f505%3A0xdf28b6d2ca439086!2sGolf%20Bluegreen%20la%20Domang%C3%A8re%20-%20Vend%C3%A9e%20(85)!5e0!3m2!1sfr!2sfr!4v1604488679385!5m2!1sfr!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2740.7019438883813!2d-1.412793684403707!3d46.61289297913133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x480424f72009f505%3A0xdf28b6d2ca439086!2sGolf%20Bluegreen%20la%20Domang%C3%A8re%20-%20Vend%C3%A9e%20(85)!5e0!3m2!1sfr!2sfr!4v1604488679385!5m2!1sfr!2sfr" width="500" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                                 </div>
                             </div>
                         </div>
