--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Liberty Golf</title>
 
 <!--BOOTSTRAP-->
@@ -24,7 +24,7 @@
     <!-- *****************************HEADER***************************** -->
 <!--NAVBAR-->
     <header id="P1">
-        <nav class="navbar navbar-expand-md bg-light navbar-light fixed-top">
+        <nav class="navbar navbar-expand-md bg-light navbar-light">
             
             <a class="navbar-brand" href="/index.html"> Liberty<img src="./Ressources/Images/navbar.png"><span>Golf</span></a>
 <!--bouton barre de navigation-->
@@ -58,7 +58,7 @@
                     <h1>Liberty<img src="./Ressources/Images/navbar.png"><span> Golf</span></h1>
                     <p class="mx-auto">Le paradis des golfeurs. Venez vous faire plaisir sur l'un des parcours mythique du championnat d'europe.</p>
                     
-                    <a href="./Indexpage2.html" class="btn btn-header">Présentation</a>
+                    <a href="./Indexpage2.html" class="btn btn-header mx-auto">Présentation</a>
                 </div>
             </div>
         </div>
