--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h1>Liberty<img src="./Ressources/Images/navbar.png"><span> Golf</span></h1>
                     <p class="mx-auto">Le paradis des golfeurs. Venez vous faire plaisir sur l'un des parcours mythique du championnat d'europe.</p>
                     
-                    <a href="./Indexpage2.html" class="btn btn-header mx-auto">Présentation</a>
+                    <a href="./Indexpage2.html" class="btn btn-header">Présentation</a>
                 </div>
             </div>
         </div>
