--- a/Tarif.html
+++ b/Tarif.html
@@ -23,7 +23,7 @@
         <!-- *****************************HEADER***************************** -->
 <!--NAVBAR-->
 <header id="hd-tarif">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/index.html"> Liberty<img src="./Ressources/Images/navbar.png"><span>Golf</span></a>
 <!--bouton barre de navigation-->
         <button class="navbar-toggler"
